tests/NormalTests/paczka1/fuzzy1/23200558.err
Error in line 6: a7yDB9K S336 46,7
Error in line 9: BejtjrPmq S336 I3,7
Error in line 7: 4by0SW7 S336 6,4
Error in line 18: 4by0SW7 S900 92,
Error in line 21: S336 S314 65,6
Error in line 19: 4by0SW7 S900 282,1
Error in line 31: HjgeR7FMEmA S314 6,8
